--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,11 @@
 			<type>pom</type>
 			<scope>import</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.6</version>
+		</dependency>
 
 
         <dependency>
